--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pendo Test</title>
+     <title>Pendo Test</title>
+          <script>
+      (function(apiKey){
+        (function(p,e,n,d,o){
+          var v,w,x,y,z;
+          o=p[d]=p[d]||{};
+          o._q=[];
+          v=['initialize','identify','updateOptions','pageLoad','track'];
+          for(w=0,x=v.length;w<x;++w)(function(m){o[m]=o[m]||function(){
+            o._q[m==="initialize"? "unshift":"push"]([m].concat([].slice.call(arguments,0)));
+          };})(v[w]);
+          y=e.createElement(n);y.async=!0;y.src='https://cdn.pendo.io/agent/static/'+apiKey+'/pendo.js';
+          z=e.getElementsByTagName(n)[0];z.parentNode.insertBefore(y,z);
+        })(window,document,'script','pendo');
+      })('1cc88766-c269-4c89-894d-becc8edda723');
+
+      pendo.initialize({
+        visitor: { id: 'VISITOR-123' },
+        account: { id: 'ACCOUNT-456' }
+      });
+    </script>
   </head>
   <body>
     <div id="navbar">
